[gd_scene load_steps=4 format=3 uid="uid://b243mw2dwhof6"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_qlgcc"]
[ext_resource type="Texture2D" uid="uid://dbvmyu3rmbcvl" path="res://kaka_bg.jpeg" id="2_iobnb"]

[sub_resource type="LabelSettings" id="LabelSettings_gegjy"]
font_size = 72

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qlgcc")

[node name="MenuBg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iobnb")
expand_mode = 1
stretch_mode = 6

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 56.0
offset_right = 898.0
offset_bottom = 155.0
text = "Aventuras de Kaká"
label_settings = SubResource("LabelSettings_gegjy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuItems" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayCaverna" type="Button" parent="MenuItems"]
layout_mode = 0
offset_left = 128.0
offset_top = 560.0
offset_right = 281.0
offset_bottom = 617.0
text = "Nível Caverna"

[node name="PlayFloresta" type="Button" parent="MenuItems"]
layout_mode = 0
offset_left = 320.0
offset_top = 560.0
offset_right = 473.0
offset_bottom = 617.0
text = "Nível Floresta"

[node name="PlayAgua" type="Button" parent="MenuItems"]
layout_mode = 0
offset_left = 512.0
offset_top = 560.0
offset_right = 665.0
offset_bottom = 617.0
text = "Nível Água"

[node name="PlayAr" type="Button" parent="MenuItems"]
layout_mode = 0
offset_left = 704.0
offset_top = 560.0
offset_right = 857.0
offset_bottom = 617.0
text = "Nível Ar"

[node name="PlayMarte" type="Button" parent="MenuItems"]
layout_mode = 0
offset_left = 896.0
offset_top = 560.0
offset_right = 1049.0
offset_bottom = 617.0
text = "Nível Marte"

[connection signal="pressed" from="MenuItems/PlayCaverna" to="." method="_on_play_caverna_pressed"]
[connection signal="pressed" from="MenuItems/PlayFloresta" to="." method="_on_play_floresta_pressed"]
[connection signal="pressed" from="MenuItems/PlayAgua" to="." method="_on_play_agua_pressed"]
[connection signal="pressed" from="MenuItems/PlayAr" to="." method="_on_play_ar_pressed"]
[connection signal="pressed" from="MenuItems/PlayMarte" to="." method="_on_play_marte_pressed"]
